add all spring related for start a new project

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,9 +9,9 @@
 <h:head>
 </h:head>
 <h:body>
-	<h1>Hello World</h1>
+	<h1>Hello World JSF Primefaces Spring Gradle Eclipse</h1>
 	<h:form>
-		<p><h:outputText value="Hello #{userView.name} !!!"/></p>
+		<p><h:outputText value="Hello #{userView.user.firstName} #{userView.user.lastName} !!!"/></p>
 		<a onclick="dialog.show();" href="#">
 			<h:outputText value="Open primefaces dialog" />
 		</a>
